WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285631
Style change from overflow:scroll to hidden doesn't repaint correctly.
https://bugs.webkit.org/show_bug.cgi?id=285631
Summary
Style change from overflow:scroll to hidden doesn't repaint correctly.
Matt Woodrow
Reported
2025-01-08 14:30:17 PST
rdar://140540582
Changing style from overflow:scroll (creating a compositing layer) to overflow:hidden (no compositing layer, and not a self painting layer) doesn't repaint the content in the ancestor layer.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2025-01-08 14:35:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38748
Matt Woodrow
Comment 2
2025-01-13 23:26:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38984
EWS
Comment 3
2025-01-14 16:11:20 PST
Committed
288901@main
(dd091dc0369d): <
https://commits.webkit.org/288901@main
> Reviewed commits have been landed. Closing PR #38984 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug