Style change from overflow:scroll to hidden doesn't repaint correctly. https://bugs.webkit.org/show_bug.cgi?id=285631 <rdar://140540582>

Reviewed by NOBODY (OOPS!).

Changing style from overflow:scroll (creating a compositing layer) to
overflow:hidden (no compositing layer, and not a self painting layer) doesn't
repaint the content in the ancestor layer.

Trying to issue a repaint at style change time isn't correct, since layout might
not be valid. We also can't see 'NeedsFullRepaint', since the style change might also
might the layer not self painting, and repaint requests for those are ignored.

This adds a new stronger repaint flag that isn't ignored for not-self-painting layers,
and sets that instead.

This ensures that after the next layout, we issue a repaint with the correct coordinates,
in the right repaint container.

* LayoutTests/compositing/repaint/not-self-painting-layer-stops-compositing-expected.html: Added.
* LayoutTests/compositing/repaint/not-self-painting-layer-stops-compositing.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::recursiveUpdateLayerPositions):
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::BackingSharingState::issuePendingRepaints):
(WebCore::RenderLayerCompositor::computeCompositingRequirements):
(WebCore::RenderLayerCompositor::layerGainedCompositedScrollableOverflow):
(WebCore::RenderLayerCompositor::layerStyleChanged):
(WebCore::RenderLayerCompositor::updateBacking):
(WebCore::RenderLayerCompositor::updateLayerCompositingState):
(WebCore::RenderLayerCompositor::repaintOnCompositingChange):
* Source/WebCore/rendering/RenderLayerCompositor.h: